--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </div>
 
     <article class="trendingPreview-movieList">
-      
+      <div class="movie-container loading"></div>
+      <div class="movie-container loading"></div>
+      <div class="movie-container loading"></div>
     </article>
   </section>
 
@@ -45,6 +47,10 @@
     <h2 class="categoriesPreview-title">Categorías</h2>
 
     <article class="categoriesPreview-list">
+      <div class="category-title load2"></div>
+      <div class="category-title load2"></div>
+      <div class="category-title load2"></div>
+      <div class="category-title load2"></div>
       <!-- <div class="category-container">
         <button id="id28" class="category-title">Romance</button>
       </div> -->
@@ -52,7 +58,14 @@
   </section>
   
   <section id="genericList" class="genericList-container inactive">
-   <!--  <div class="movie-container">
+    <div class=" movie-container loading"></div>
+    <div class=" movie-container loading"></div>
+    <div class=" movie-container loading"></div>
+    <!--  <div class=" movie-container loading"></div>
+    <div class=" movie-container loading"></div>
+    <div class=" movie-container loading"></div> -->
+
+    <!--  <div class="movie-container">
       <img
         src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
         class="movie-img"
@@ -85,16 +98,16 @@
     </p>
 
     <article class="categories-list">
-      <div class="category-container">
-        <h3 id="id28" class="category-title">Romance</h3>
+      <div class="category-container  load2">
+        <!-- <h3 id="id28" class="category-title">Romance</h3> -->
       </div>
 
-      <div class="category-container">
-        <h3 id="id16" class="category-title">Drama</h3>
+      <div class="category-container  load2">
+        <!-- <h3 id="id16" class="category-title">Drama</h3> -->
       </div>
 
-      <div class="category-container">
-        <h3 id="id14" class="category-title">Acción</h3>
+      <div class="category-container  load2">
+        <!-- <h3 id="id14" class="category-title">Acción</h3> -->
       </div>
     </article>
 
@@ -102,6 +115,9 @@
       <h2 class="relatedMovies-title">Películas similares</h2>
 
       <div class="relatedMovies-scrollContainer">
+        <div class="movie-container loading"></div>
+        <div class="movie-container loading"></div>
+        <div class="movie-container loading"></div>
         <!-- <div class="movie-container">
           <img
             src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
